--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ var yValue = function(d) { return d["#FtMade"];}, // data -> value
     yAxis = d3.svg.axis().scale(yScale).orient("left");
 
 // setup fill color
-var cValue = function(d) { return d.Manufacturer;},
+var cValue = function(d) { return d['#Team Name'];},
     color = d3.scale.category10();
 
 // add the graph canvas to the body of the webpage
@@ -72,94 +72,6 @@ var tooltip = d3.select("body").append("div")
     .attr("class", "tooltip")
     .style("opacity", 0);
 
-// // load data
-// d3.csv("./cereal.csv", function(error, data) {
-
-//   // change string (from CSV) into number format
-//   console.log(data);
-//   data.forEach(function(d) {
-//     d.PtsPerGame = +d.PtsPerGame;
-//     d["#FtMade"] = +d["#FtMade"];
-// //    console.log(d);
-//   });
-
-  
-
-//   // don't want dots overlapping axis, so add in buffer to data domain
-//   xScale.domain([d3.min(data, xValue)-1, d3.max(data, xValue)+1]);
-//   yScale.domain([d3.min(data, yValue)-1, d3.max(data, yValue)+1]);
-
-//   // x-axis
-//   svg.append("g")
-//       .attr("class", "x axis")
-//       .attr("transform", "translate(0," + height + ")")
-//       .call(xAxis)
-//     .append("text")
-//       .attr("class", "label")
-//       .attr("x", width)
-//       .attr("y", -6)
-//       .style("text-anchor", "end")
-//       .text("PtsPerGame");
-
-//   // y-axis
-//   svg.append("g")
-//       .attr("class", "y axis")
-//       .call(yAxis)
-//     .append("text")
-//       .attr("class", "label")
-//       .attr("transform", "rotate(-90)")
-//       .attr("y", 6)
-//       .attr("dy", ".71em")
-//       .style("text-anchor", "end")
-//       .text("#FtMade");
-
-//   // draw dots
-//   svg.selectAll(".dot")
-//       .data(data)
-//     .enter().append("circle")
-//       .attr("class", "dot")
-//       .attr("r", 3.5)
-//       .attr("cx", xMap)
-//       .attr("cy", yMap)
-//       .style("fill", function(d) { return color(cValue(d));}) 
-//       .on("mouseover", function(d) {
-//           tooltip.transition()
-//                .duration(200)
-//                .style("opacity", .9);
-//           tooltip.html(d["Cereal Name"] + "<br/> (" + xValue(d) 
-// 	        + ", " + yValue(d) + ")")
-//                .style("left", (d3.event.pageX + 5) + "px")
-//                .style("top", (d3.event.pageY - 28) + "px");
-//       })
-//       .on("mouseout", function(d) {
-//           tooltip.transition()
-//                .duration(500)
-//                .style("opacity", 0);
-//       });
-
-//   // draw legend
-//   var legend = svg.selectAll(".legend")
-//       .data(color.domain())
-//     .enter().append("g")
-//       .attr("class", "legend")
-//       .attr("transform", function(d, i) { return "translate(0," + i * 20 + ")"; });
-
-//   // draw legend colored rectangles
-//   legend.append("rect")
-//       .attr("x", width - 18)
-//       .attr("width", 18)
-//       .attr("height", 18)
-//       .style("fill", color);
-
-//   // draw legend text
-//   legend.append("text")
-//       .attr("x", width - 24)
-//       .attr("y", 9)
-//       .attr("dy", ".35em")
-//       .style("text-anchor", "end")
-//       .text(function(d) { return d;})
-// });
-
 
 // load data
 d3.csv("./nba.csv", function(error, data) {
@@ -167,6 +79,8 @@ d3.csv("./nba.csv", function(error, data) {
   // change string (from CSV) into number format
   console.log(data);
   data.forEach(function(d) {
+    d['FirstName'] = d['#FirstName'];
+    d['LastName'] = d['#LastName'];
     d['PtsPerGame'] = +d['#PtsPerGame'];
     d["FtMade"] = +d["#FtMade"];
    console.log(d);
@@ -215,8 +129,8 @@ d3.csv("./nba.csv", function(error, data) {
           tooltip.transition()
                .duration(200)
                .style("opacity", .9);
-          tooltip.html(d["Cereal Name"] + "<br/> (" + xValue(d) 
-	        + ", " + yValue(d) + ")")
+          tooltip.html(d["FirstName"] + ' ' + d["LastName"] + "<br/> (PPG - " + xValue(d) 
+	        + ", FTMPG - " + yValue(d) + ")")
                .style("left", (d3.event.pageX + 5) + "px")
                .style("top", (d3.event.pageY - 28) + "px");
       })
