--- a/index.html
+++ b/index.html
@@ -5,10 +5,25 @@
 <!-- Example based on http://bl.ocks.org/mbostock/3887118 -->
 <!-- Tooltip example from http://www.d3noob.org/2013/01/adding-tooltips-to-d3js-graph.html -->
 <!-- Coding style based on http://gist.github.com/mbostock/5977197 -->
+<div class="Flex-Container">
+<span> hello</span>
+  <div class="Grid-Container">
+
+  </div>
+
+</div>
+
 
 <style>
 body {
   font: 11px sans-serif;
+}
+.Flex-Container{
+  display:flex;
+  width:100%;
+}
+.Grid-Container{
+  flex:1;
 }
 
 .axis path,
@@ -33,10 +48,12 @@ body {
 <script src="http://d3js.org/d3.v3.min.js"></script>
 
 <script>
-const body = document.querySelector('html');
+const gridContainer = document.querySelector('.Grid-Container');
+const flexContainer = document.querySelector('.Flex-Container');
+[flexContainer.innerHeight, flexContainer.innerWidth] = [window.innerHeight, window.innerWidth];
 var margin = {top: 20, right: 20, bottom: 30, left: 40},
-    width = window.innerWidth - margin.left - margin.right,
-    height = window.innerHeight - margin.top - margin.bottom;
+    width = flexContainer.innerWidth - margin.left - margin.right,
+    height = flexContainer.innerHeight - margin.top - margin.bottom;
 
 /* 
  * value accessor - returns the value to encode for a given data object.
@@ -62,14 +79,14 @@ var cValue = function(d) { return d['#Team Name'];},
     color = d3.scale.category10();
 
 // add the graph canvas to the body of the webpage
-var svg = d3.select("body").append("svg")
+var svg = d3.select(".Grid-Container").append("svg")
     .attr("width", width + margin.left + margin.right)
     .attr("height", height + margin.top + margin.bottom)
   .append("g")
     .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
 // add the tooltip area to the webpage
-var tooltip = d3.select("body").append("div")
+var tooltip = d3.select(".Grid-Container").append("div")
     .attr("class", "tooltip")
     .style("opacity", 0);
 
