--- a/index.html
+++ b/index.html
@@ -18,11 +18,18 @@
 body {
   font: 11px sans-serif;
 }
+
+html, body {
+  height: 100%;
+  width: 100%;
+}
+
 .Flex-Container{
   display:flex;
-  width:100%;
+  height:100%;
 }
 .Grid-Container{
+  
   flex:1;
 }
 
@@ -48,8 +55,8 @@ body {
 <script src="http://d3js.org/d3.v3.min.js"></script>
 
 <script>
-const gridContainer = document.querySelector('.Grid-Container');
 const flexContainer = document.querySelector('.Flex-Container');
+const gridContainer = flexContainer.querySelector('.Grid-Container');
 [flexContainer.innerHeight, flexContainer.innerWidth] = [window.innerHeight, window.innerWidth];
 var margin = {top: 20, right: 20, bottom: 30, left: 40},
     width = flexContainer.innerWidth - margin.left - margin.right,
@@ -80,8 +87,8 @@ var cValue = function(d) { return d['#Team Name'];},
 
 // add the graph canvas to the body of the webpage
 var svg = d3.select(".Grid-Container").append("svg")
-    .attr("width", width + margin.left + margin.right)
-    .attr("height", height + margin.top + margin.bottom)
+    .attr("width", '100%')
+    .attr("height", '100%')
   .append("g")
     .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
